Bug 338340 - Back and forward buttons too small in Icons and Text mode, r=mano, a=darin

--- a/mozilla/browser/themes/winstripe/browser/browser.css
+++ b/mozilla/browser/themes/winstripe/browser/browser.css
@@ -225,7 +225,8 @@ menuitem.bookmark-item {
   -moz-margin-end: 0px;
 }
 
-toolbar[mode="full"] .toolbarbutton-1 {
+toolbar[mode="full"] .toolbarbutton-1,
+toolbar[mode="full"] .toolbarbutton-menubutton-button {
   min-width: 57px;
 }
 
